feat: implement notification yumshare-client + core

--- a/yumshare-client/src/app/components/side-bar/side-bar.component.html
+++ b/yumshare-client/src/app/components/side-bar/side-bar.component.html
@@ -30,6 +30,10 @@
 				<mat-icon>mail</mat-icon>
 				<span>Messages</span>
 			</a>
+			<!-- <a mat-list-item routerLink="/notifications" routerLinkActive="active">
+				<mat-icon>notifications</mat-icon>
+				<span>Notifications</span>
+			</a> -->
 		}
 	</mat-nav-list>
 	@if (isLoggedIn) {
